[package]
name = "kovi-plugin-siliconflow"
version = "0.1.1"
edition = "2024"
keywords = ["kovi", "kovi-plugin", "siliconflow"]
description = "一款对接硅基流动的机器人问答插件，仅需硅基流动的 api_key 就可以使用"
license = "MPL-2.0"
authors = ["admsec <admsec223@gmail.com>"]

[dependencies]
kovi = ">=0.11.8"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
