[package]
name = "kovi-plugin-siliconflow"
version = "0.6.3"
edition = "2024"
description = "一款基于 kovi 的对接硅基流动的机器人问答插件"
license = "MPL-2.0"
authors = ["Admsec <Admsec223@gmail.com>"]
repository = "https://github.com/Admsec/kovi-plugin-siliconflow.git"

[dependencies]
kovi-plugin-expand-napcat = "0.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
thiserror = "2.0.12"
kovi = ">= 0.8.4"